[package]
name = "libass-sys"
version = "0.1.2"
authors = ["Tadeo Kondrak <me@tadeo.ca>"]
edition = "2018"
build = "build.rs"
description = "Raw bindings for libass"
license = "ISC"
repository = "https://github.com/tadeokondrak/libass-rs"
categories = [ "external-ffi-bindings" ]

[build-dependencies]
bindgen = "0.50"
metadeps = "1.1"

[package.metadata.pkg-config]
libass = "0.14"
